# pharos

./: .coderabbit.yaml  .copier-answers.yml  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  scorecard.yml  security.yml
docs/: INDEX.md  architecture.md  overview.md
examples/: checks.toml
examples/launchd/: com.example.pharos.plist
scripts/: build-release.sh  pharos_entry.py
src/pharos/: __init__.py  cli.py  config.py  telemetry.py
src/pharos/alerts/: __init__.py  manager.py  store.py
src/pharos/checks/: base.py  contrib.py  loader.py  probes.py  runner.py  types.py
src/pharos/notify/: __init__.py  base.py  console.py  dingtalk.py  routing.py
tests/: conftest.py  test_alerts.py  test_check_types.py  test_cli.py  test_config.py  test_contrib.py  test_loader.py  test_notify.py  test_probes.py  test_routing.py  test_runner.py  test_telemetry.py
